--- a/index.html
+++ b/index.html
@@ -10,28 +10,30 @@
 
 <body> 
 <div class="top-nav"> 
-    <div class="navbar-left">
-    <img class="logo" src="./assets/logo.png"/>
-    <nav>
-        <a class="main-navbar-item" href="#">Ana Sayfa</a>
-        <a href="#">Diziler</a>
-        <a href="#">Filmler</a>
-        <a href="#">Yeni ve Popüler</a>
-    </nav>
-</div>
-    <div class="navbar-right">
-        <img class="search" src="./assets/search-icon.svg"/>
-        <img class="avatar" src="./assets/avatar.png"/>
+    <div class="navbar" id="navbar">
+            <div class="navbar-left">
+                <img class="logo" src="./assets/logo.png"/>
+                <nav>
+                     <a class="main-navbar-item" href="#">Ana Sayfa</a>
+                     <a href="#">Diziler</a>
+                     <a href="#">Filmler</a>
+                     <a href="#">Yeni ve Popüler</a>
+                </nav>
+            </div>
+            <div class="navbar-right">
+                <img class="search" src="./assets/search-icon.svg"/>
+                <img class="avatar" src="./assets/avatar.png"/>
+            </div>  
     </div>
-  
 </div>
+
+<div class="all-movies">
     <div id="trend-movie" class="trend-movie"></div>
-    <div id="movies-container" class="movies-container"> <h3>Popüler</h3> </div>
-
-
-    <div id="horror-movies-container" class="horror-movies-container"> <h3>Korku Temalı Filmler</h3></div>
-
-
+    <div class="rest">
+    <div id="movies-container" class="movies-container"><h3>Popüler</h3> </div>
+    <div id="horror-movies-container" class="horror-movies-container"><h3>Korku Temalı Filmler</h3></div>
+    </div>
+</div>
 <footer>
     <img src="" alt="svg">
     <img src="" alt="svg">
