added new sections

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <div class="rest">
     <div id="movies-container" class="movies-container"><h3>Popüler</h3> </div>
     <div id="horror-movies-container" class="horror-movies-container"><h3>Korku Temalı Filmler</h3></div>
+    <div id="comedy-movies-container" class="comedy-movies-container"><h3>Komedi</h3></div>
+    <div id="original-movies-container" class="comedy-movies-container"><h3>Netflix Original</h3></div>
+    <div id="action-movies-container" class="comedy-movies-container"><h3>Aksiyon Filmleri</h3></div>
+    <div id="documentary-movies-container" class="comedy-movies-container"><h3>Belgeseller</h3></div>
+    <div id="drama-movies-container" class="comedy-movies-container"><h3>Drama</h3></div>
     </div>
 </div>
 <footer>
