footer created and styled

--- a/index.html
+++ b/index.html
@@ -32,31 +32,33 @@
     <div class="rest">
     <div id="movies-container" class="movies-container"><h3>Popüler</h3> </div>
     <div id="horror-movies-container" class="horror-movies-container"><h3>Korku Temalı Filmler</h3></div>
+    <div id="original-movies-container" class="comedy-movies-container"><h3>Netflix Original İçerikleri</h3></div>
     <div id="comedy-movies-container" class="comedy-movies-container"><h3>Komedi</h3></div>
-    <div id="original-movies-container" class="comedy-movies-container"><h3>Netflix Original</h3></div>
     <div id="action-movies-container" class="comedy-movies-container"><h3>Aksiyon Filmleri</h3></div>
     <div id="documentary-movies-container" class="comedy-movies-container"><h3>Belgeseller</h3></div>
     <div id="drama-movies-container" class="comedy-movies-container"><h3>Drama</h3></div>
     </div>
 </div>
 <footer>
-    <img src="" alt="svg">
-    <img src="" alt="svg">
-    <img src="" alt="svg">
-    <img src="" alt="svg">
+     
     <nav>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-        <a href="#">Yeni ve Popüler</a>
-
+        <div>
+        <img src="./assets/facebook.svg" alt="svg">
+    <img src="./assets/instagram.svg" alt="svg">
+    <img src="./assets/twitter.svg" alt="svg">
+    <img src="./assets/youtube.svg" alt="svg"> </div> <br>
+        <a href="#">Seslendirme ve Alt Yazı</a>
+        <a href="#">Sesli Betimleme</a>
+        <a href="#">Yardım Merkezi</a>
+        <a href="#">Hediye Kartları</a>
+        <a href="#">Medya Merkezi</a>
+        <a href="#">Yatırımcı İlişkileri</a>
+        <a href="#">İş İmkanları</a>
+        <a href="#">Çerez Tercihleri</a>
+        <a href="#">Kurumsal Bilgiler</a>
+        <a href="#">Gizlilik</a>
+        <a href="#">Yasal Hükümler</a>
+        <a href="#">Bize Ulaşın</a>
     </nav>
 
 </footer>
