added media queries

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <img src="./assets/instagram.svg" alt="svg">
     <img src="./assets/twitter.svg" alt="svg">
     <img src="./assets/youtube.svg" alt="svg"> </div> <br>
-        <a href="#">Seslendirme ve Alt Yazı</a>
+        <a href="#">Seslendirme</a>
         <a href="#">Sesli Betimleme</a>
         <a href="#">Yardım Merkezi</a>
         <a href="#">Hediye Kartları</a>
