header scroll effect added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
 <body> 
+<header>
 <div class="top-nav"> 
     <div class="navbar" id="navbar">
             <div class="navbar-left">
@@ -26,7 +27,7 @@
             </div>  
     </div>
 </div>
-
+</header>
 <div class="all-movies">
     <div id="trend-movie" class="trend-movie"></div>
     <div class="rest">
@@ -64,7 +65,7 @@
 </footer>
     <script src="api.js"></script>
     <script src="containers.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     
 </body>
 </html>
